fix badge alignment

--- a/js/common/components/badge/badge.less
+++ b/js/common/components/badge/badge.less
@@ -7,7 +7,7 @@
   display: flex;
   position: absolute;
   font-size: 0.85em;
-  line-height: 1.65em;
+  line-height: initial;
   justify-content: center;
   border-radius: 50%;
   flex-direction: row;
